# air-BNB-Valuation

./: .env.example  .gitignore  README.md  pyproject.toml
data/: sample_properties.csv
docs/: portfolio_story.md
src/str_investment_lab/: __init__.py  cli.py  csv_ingestion.py  ml.py  models.py  sensitivity.py  tax.py  underwriting.py
src/str_investment_lab/data_sources/: __init__.py  airdna.py  base.py  bridge.py  mock.py
tests/: test_csv_ingestion.py  test_underwriting.py
