[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "str-investment-lab"
version = "0.1.0"
description = "Short-term rental acquisition underwriting, sensitivity analysis, and data ingestion toolkit."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Muhammad Ali" }
]
license = { text = "MIT" }
dependencies = []

[project.optional-dependencies]
api = [
  "requests>=2.32"
]
ml = [
  "numpy>=1.26",
  "pandas>=2.2",
  "scikit-learn>=1.5"
]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
  "mypy>=1.10"
]

[project.scripts]
str-investment-lab = "str_investment_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true

